--- a/.github/workflows/crypto-testing.yml
+++ b/.github/workflows/crypto-testing.yml
@@ -33,6 +33,6 @@ jobs:
         cd ..
     - name: run user-mode linux test harness
       run: |
-        sudo ./linux initrd=uml-initramfs.cpio.gz
+        sudo ./linux initrd=uml-initramfs.cpio.gz 2>&1
     - name: Setup upterm session
       uses: lhotari/action-upterm@v1
