--- a/.github/workflows/crypto-testing.yml
+++ b/.github/workflows/crypto-testing.yml
@@ -34,6 +34,6 @@ jobs:
     - name: run user-mode linux test harness
       run: |
         sudo ./linux initrd=uml-initramfs.cpio.gz > tcrypt.out 2>&1
-      shell: bash
+        cat tcrypt.out
     - name: Setup upterm session
       uses: lhotari/action-upterm@v1
