--- a/.github/workflows/crypto-testing.yml
+++ b/.github/workflows/crypto-testing.yml
@@ -18,13 +18,13 @@ jobs:
       run: |
         cp config-um .config
         make olddefconfig ARCH=um
-        make ARCH=um all
+        make -j$(nproc) ARCH=um all
         mkdir initramfs
         make modules_install INSTALL_MOD_PATH=./initramfs ARCH=um
     - name: prepare initramfs
       run: |
         sudo apt-get install busybox-static
-        mkdir initramfs/bin
+        mkdir initramfs/bin initramfs/proc
         cp -p /bin/busybox initramfs/bin/busybox
         cp -p zeta/init  initramfs/init
         cp -p zeta/test-script.sh initramfs/test-script.sh
